results/SpecGenBench/0-shot/log-MulNested-2023_11_28_23_16_21.txt
public class MulNested {
    //@ requires true;
    //@ ensures \result == x * y;
    public static int mulNested(int x, int y) {
        int res = 0, m = x, n = y, sign = 1;
        if (x < 0) {
            m = -x;
            sign = -sign;
        }
        if (y < 0) {
            n = -y;
            sign = -sign;
        }
        //@ loop_invariant res == i * n;
        //@ loop_variant m - i;
        for (int i = 0; i < m; i++) {
            //@ loop_invariant res == i * n;
            //@ loop_variant n - j;
            for (int j = 0; j < n; j++) {
                res = res + 1;
            }
        }
        //@ assert res == m * n;
        //@ assert \result == sign * res;
        return sign * res;
    }
}
/home/max/Documents/JMLGPT/tmp/MulNested.java:15: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
        //@ loop_variant m - i;
            ^
/home/max/Documents/JMLGPT/tmp/MulNested.java:18: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
            //@ loop_variant n - j;
                ^
2 errors

